fixed map__contacts wrap position

--- a/source/style/common/contacts.scss
+++ b/source/style/common/contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
-    width: 600px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
     background-color: rgba($white, 0.7);
     padding: 40px 20px;
     @include md() {
