--- a/source/style/common/map.scss
+++ b/source/style/common/map.scss
@@ -27,9 +27,9 @@
     position: absolute;
     z-index: 100;
     top: 20%;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    bottom: 40%;
+    left: 25%;
+    right: 25%;
     @include md() {
         top: 15%;
     }
